src/test/deca/syntax/parser/invalid/inst_expr_print_symbole_mod.deca
// Parser test, print impossible (missing string or data)

{
    print(%) ;
}